--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Varela&display=swap');
 
+
+body{
+    font-family:varel ;
+}
 
